# proc-macro-workshop

./: Cargo.toml
builder/: Cargo.toml
builder/src/: lib.rs
debug/: Cargo.toml
debug/src/: lib.rs
seq/: Cargo.toml
seq/src/: lib.rs
seq/tests/: 04-paste-ident-suffix.rs  progress.rs
sorted/: Cargo.toml
sorted/src/: lib.rs
